--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./main.css">
 </head>
 <body>
     <main>
@@ -35,7 +36,7 @@
         </header>
 
 
-        <div>
+        <div class="companies">
             <h1>
                 We Help <br>
                 Companies.
@@ -46,11 +47,11 @@
             </p>
         </div>
 
-        <div>
-            <div>
-            <h3>
+        <div class="intro">
+            <div class="intro">
+            <p>
                 INTRO
-            </h3>
+            </p>
 
 
             <h2>
@@ -59,23 +60,25 @@
             </h2>
             </div>
 
-            <div>
-              <div>
+            <div class="about">
+              <div class="about-us">
+                <img class="icon" src="./icon/file-code-regular.svg" alt="code-regular">
                 <h3>
                     About Us
                 </h3>
                  <p>
                     With more than 20 years of <br>
-                    experience we can deliver the best <br>
-                    services
+                    experience we can deliver <br>
+                    the best services
                 </p>
 
-                <p>
+                <p class="about-us-p">
                     LEARN MORE
                 </p>
                </div>
 
-               <div>
+               <div class="about-us">
+                <img class="icon" src="./icon/landmark-solid.svg" alt="landmark">
                 <h3>
                     Services
                 </h3>
@@ -85,12 +88,13 @@
                     services
                 </p>
 
-                <p>
+                <p class="about-us-p">
                     LEARN MORE
                 </p>
                </div>
 
-               <div>
+               <div class="about-us">
+                <img class="icon" src="./icon/file-code-regular.svg" alt="regular">
                 <h3>
                     Content Us
                 </h3>
@@ -100,15 +104,15 @@
                     services
                 </p>
 
-                <p>
+                <p class="about-us-p">
                     LEARN MORE
                 </p>
                </div>
 
             </div>
 
-            <div>
-                <div>
+            <div class="corporate">
+                <div class="business">
                     <h2>
                         The <br>
                         Corporate
@@ -122,30 +126,33 @@
 
                     <h4>
                         Business
+                        <img class="icon" src="./icon/plus-solid.svg" alt="plus">
                     </h4>
 
                     <h4>
                         Finances
+                        <img class="icon" src="./icon/plus-solid.svg" alt="plus">
                     </h4>
 
                     <h4>
                         Planning
+                        <img class="icon" src="./icon/plus-solid.svg" alt="plus">
                     </h4>
                 </div>
 
-                <div>
-                    <img src="" alt="">
+                <div class="image">
+                    <img class="image-2" src="./image/pexels-photo-8353841man.webp" alt="pexels-photo-8353841man">
                 </div>
             </div>
 
         </div>
 
-        <div>
-            <div>
-                <img src="" alt="">
+        <div class="regular">
+            <div class="pellentesque-image">
+                <img class="image-2" src="./image/pexels-photo-8837484.jpeg" alt="">
             </div>
 
-            <div>
+            <div class="pellentesque">
                 <h4>
                     Not Just your Regular <br>
                     Business Agency
@@ -155,19 +162,25 @@
                  senectus et netus et malesueda fames <br>
                  acturpis egestas praesent gravida.
                 </p>
-                <div>
+                <div class="learn-more">
                 <p>
                   LEARN MORE
                 </p>
-                <p>
+                <p class="view">
                   VIEW PRICING
                 </p>
+                </div>
+                <div class="call-lee">
+                    <img class="image" src="./image/pexels-photo-12902858.webp" alt="lee">
+                    <p>
+                        Call Lee Today +346 915 333 85888
+                    </p>
                 </div>
             </div>
         </div>
 
-        <div>
-            <div>
+        <div class="solution">
+            <div class="our">
                 <h3>
                     Our <br>
                     Solution
@@ -178,10 +191,10 @@
                 </p>
             </div>
 
-            <div>
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
+            <div class="solution-image">
+                <img class="image1" src="./image/pexels-photo-9850080ss.webp" alt="">
+                <img class="image1" src="./image/pexels-photo-7681087.jpeg" alt="">
+                <img class="image1" src="./image/pexels-photo-12902858.webp" alt="">
             </div>
         </div>
 
